# LLM-Evaluation-Harness

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  live-providers.yml
configs/gates/: reference_request_triage_v1.json
configs/plans/: reference_request_triage_baseline.json  reference_request_triage_candidate_corrected.json  reference_request_triage_candidate_degraded.json  reference_request_triage_provider.json
configs/price_tables/: README.md  example.v1.json
docs/: architecture.md  business-ontology.md  deterministic-agentic-boundary.md  engineering-ontology.md  failure-taxonomy.md  implementation-status.md  integration-boundaries.md  memory-model.md  project-thesis.md  system-boundary.md  technology-map.md
docs/adr/: 0001-domain-specific-first-slice.md  0002-raw-evidence-before-parsing.md  0003-no-llm-judge-in-first-slice.md  0004-qdrant-is-derived-index.md
docs/roadmap/: external-target-adapters.md  phase-10-dashboard-hardening.md  phase-5-ci-and-comparison.md  phase-6-persistence-api-workers.md  phase-7-rag-qdrant.md  phase-8-governed-tool-use-evals.md  phase-9-ml-baselines.md
docs/spec/: README.md
docs/workflow-contracts/: reference-request-triage-v1.md
migrations/: env.py
migrations/versions/: 5a854315a256_initial_schema.py
schemas/: assertion.v1.json  assertion_result.v1.json  eval_case.v1.json  gate_policy.v1.json  run_manifest.v1.json
schemas/examples/: assertion.example.json  assertion.v1.example.json  assertion_result.example.json  assertion_result.v1.example.json  eval_case.example.json  eval_case.v1.example.json  gate_policy.example.json  gate_policy.v1.example.json  request_triage_input.example.json  request_triage_output.example.json  run_manifest.example.json  run_manifest.v1.example.json  trace_event.example.json
schemas/examples/reference/: request_triage_input.v1.example.json  request_triage_output.v1.example.json  trace_event.v1.example.json
schemas/reference/: request_triage_input.v1.json  request_triage_output.v1.json  trace_event.v1.json
scripts/: build_request_triage_release.py
src/ai_eval/: __init__.py  config.py  demo.py  harness.py  identity.py  trials.py
src/ai_eval/api/: __init__.py  app.py  deps.py  schemas.py
src/ai_eval/artifacts/: __init__.py  writer.py
src/ai_eval/baselines/: __init__.py  compare.py  models.py
src/ai_eval/cli/: __init__.py  main.py
src/ai_eval/datasets/: __init__.py  loader.py  release.py  validation.py
src/ai_eval/domain/: __init__.py  enums.py  failure_codes.py  hashing.py  models.py
src/ai_eval/evaluation/: __init__.py  pipeline.py
src/ai_eval/evidence/: __init__.py  resolver.py
src/ai_eval/execution/: __init__.py  (+3 more)
tests/contract/: test_cli.py  test_execution.py  test_providers.py  test_targets.py
tests/golden/: test_demo.py  test_evaluation_golden.py
tests/integration/: test_api.py  test_storage.py
tests/unit/: test_baselines.py  test_configs.py  test_datasets.py  test_domain.py  test_gates.py  test_identity.py  test_metrics.py  test_normalize.py  test_parser.py  test_prompts_and_pricing.py  test_schemas.py  test_scorers.py  test_trials.py
(+57 files in other folders)
