[project]
name = "ai-eval"
version = "0.1.0"
description = "Standalone AI Evaluation & Reliability Platform — versioned datasets, deterministic evidence-backed scoring, baseline comparison, and regression gates for AI workflows."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Razrocks" }]
keywords = ["llm", "evaluation", "regression-gate", "reliability", "benchmark"]

# --- core: everything the offline first checkpoint (M0-M4) needs. No provider SDKs, no DB, no vector store. ---
dependencies = [
    "pydantic>=2.7,<3",
    "typer>=0.12,<1",
    "jsonschema>=4.21,<5",
    "numpy>=1.26,<3",
    "scikit-learn>=1.4,<2",
    "pandas>=2.2,<3",
    "python-dateutil>=2.9,<3",
]

[project.optional-dependencies]
# Introduced only at their milestone. Declared now so `core` stays lean; do not install early.
providers = ["anthropic>=0.34", "openai>=1.40", "google-genai>=0.3", "httpx>=0.27"]      # M5
rag = ["qdrant-client>=1.10", "sentence-transformers>=3.0", "pypdf>=4.2", "python-docx>=1.1", "ragas>=0.1", "deepeval>=0.21"]  # M7
ml = ["catboost>=1.2", "transformers>=4.44", "torch>=2.3", "datasets>=2.20", "evaluate>=0.4", "peft>=0.12", "trl>=0.9", "rapidfuzz>=3.9"]  # M9
api = ["fastapi>=0.112", "uvicorn>=0.30", "sqlalchemy>=2.0", "alembic>=1.13", "psycopg[binary]>=3.2"]  # M6
worker = ["celery>=5.4", "redis>=5.0"]  # M6

[project.scripts]
ai-eval = "ai_eval.cli.main:app"

[dependency-groups]
# uv dev tooling (PEP 735). Installed by default with `uv sync`.
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pandas-stubs",
    "types-python-dateutil",
    "types-jsonschema",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_eval"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]
ignore = ["PLR0913"]  # allow wide constructors for frozen manifest/record models

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]  # literal values in assertions are expected in tests
"src/ai_eval/cli/*" = ["B008"]  # typer.Option(...) in defaults is the Typer idiom
# Provider SDKs are optional extras; importing them lazily at the call site is the design,
# so the core install and CI never require them.
"src/ai_eval/targets/providers/clients.py" = ["PLC0415"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Optional extras: not installed in the core environment, imported lazily at call sites.
module = [
    "sklearn.*",
    "catboost.*",
    "qdrant_client.*",
    "sentence_transformers.*",
    "anthropic.*",
    "openai.*",
    "google.*",
    "transformers.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.coverage.run]
source = ["ai_eval"]
branch = true
